--- a/Estilos/producto.css
+++ b/Estilos/producto.css
@@ -1,64 +1,54 @@
 html, body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .pic-ctn {
-    width: 100vw;
-    height: 200px;
-  }
-  
-  @keyframes display {
-    0% {
+  margin: 0;
+  padding: 0;
+}
+
+.pic-ctn {
+  position: relative;
+  width: 100vw;
+  height: 300px;
+  margin-top: 15vh;
+}
+
+.pic-ctn > img {
+  position: absolute;
+  top: 0;
+  left: calc(50% - 100px);
+  opacity: 0;
+  animation: fade-in-out 10s infinite;
+}
+
+img:nth-child(2) {
+  animation-delay: 2s;
+}
+img:nth-child(3) {
+  animation-delay: 4s;
+}
+img:nth-child(4) {
+  animation-delay: 6s;
+}
+img:nth-child(5) {
+  animation-delay: 8s;
+}
+
+@keyframes fade-in-out {
+  0% {
       transform: translateX(200px);
       opacity: 0;
-    }
-    10% {
+  }
+  10%, 20% {
       transform: translateX(0);
       opacity: 1;
-    }
-    20% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-    30% {
+  }
+  30%, 100% {
       transform: translateX(-200px);
       opacity: 0;
-    }
-    100% {
-      transform: translateX(-200px);
-      opacity: 0;
-    }
   }
-  
-  .pic-ctn {
-    position: relative;
-    width: 100vw;
-    height: 300px;
-    margin-top: 15vh;
-  }
-  
-  .pic-ctn > img {
-    position: absolute;
-    top: 0;
-    left: calc(50% - 100px);
-    opacity: 0;
-    animation: display 10s infinite;
-  }
-  
-  img:nth-child(2) {
-    animation-delay: 2s;
-  }
-  img:nth-child(3) {
-    animation-delay: 4s;
-  }
-  img:nth-child(4) {
-    animation-delay: 6s;
-  }
-  img:nth-child(5) {
-    animation-delay: 8s;
-  }
-  .estiloimagen{
-    width: 10%;
-    height: 10%;
-  }
+}
+
+.estiloimagen {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: auto;
+}
