--- a/templates/header.html
+++ b/templates/header.html
@@ -20,6 +20,16 @@
 </head>
 
 <body>
+
+    <div class="container">
+        <!-- Carrito -->
+        <button type="button" class="btn btn-primary btn-sm position-fixed top-0 end-0 mt-4 me-4">
+            <i class="bi bi-cart"></i> Carrito
+        </button>
+    
+    </div>
+
+
     <!-- Header -->
     <header class="header py-2">
         <nav class="navbar">
@@ -43,6 +53,9 @@
                         </li>
                         <li class="nav-item bg-warning rounded mx-4">
                             <a class="nav-link text-white p-2 text-uppercase" href="quienes_somos.php">Quiénes Somos</a>
+                        </li>
+                        <li class="nav-item bg-warning rounded mx-4">
+                            <a class="nav-link text-white p-2 text-uppercase" href="logueo.php">Iniciar Sesión</a>
                         </li>
                     </ul>
                 </div>
