--- a/templates/header.html
+++ b/templates/header.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="js/jquery-ui-1.13.2/jquery-ui.css">
     <script src="js/addProducto.js"></script>
     <script src="js/productosAdmin.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 </head>
 
 <body>
@@ -26,7 +30,7 @@
         <button type="button" class="btn btn-primary btn-sm position-fixed top-0 end-0 mt-4 me-4">
             <i class="bi bi-cart"></i> Carrito
         </button>
-    
+
     </div>
 
 
