--- a/templates/headerInicio.html
+++ b/templates/headerInicio.html
@@ -19,14 +19,6 @@
 
 <body>
 
-    <div class="container">
-        <!-- Carrito -->
-        <button type="button" class="btn btn-primary btn-sm position-fixed top-0 end-0 mt-4 me-4">
-            <i class="bi bi-cart"></i> Carrito
-        </button>
-
-    </div>
-
 
     <!-- Header -->
     <header class="header py-2">
@@ -40,19 +32,16 @@
                 </div>
                 <div class="mt-3">
                     <ul class="navbar-nav d-flex flex-row justify-content-center">
-                        <li class="nav-item bg-warning rounded mx-4">
-                            <a class="nav-link text-white p-2 text-uppercase" href="index.php">Inicio</a>
-                        </li>
-                        <li class="nav-item bg-warning rounded mx-4">
-                            <a class="nav-link text-white p-2 text-uppercase" href="productos.php">Productos</a>
-                        </li>
+
                         <li class="nav-item bg-warning rounded mx-4">
                             <a class="nav-link text-white p-2 text-uppercase" href="contacto.php">Contacto</a>
                         </li>
                         <li class="nav-item bg-warning rounded mx-4">
                             <a class="nav-link text-white p-2 text-uppercase" href="quienes_somos.php">Quiénes Somos</a>
                         </li>
-
+                        <li class="nav-item bg-warning rounded mx-4">
+                            <a class="nav-link text-white p-2 text-uppercase" href="logueo.php">Iniciar Sesión</a>
+                        </li>
                     </ul>
                 </div>
             </div>
