--- a/templates/header.html
+++ b/templates/header.html
@@ -21,10 +21,9 @@
 
     <div class="container">
         <!-- Carrito -->
-        <button type="button" class="btn btn-primary btn-sm position-fixed top-0 end-0 mt-4 me-4">
-            <i class="bi bi-cart"></i> Carrito
-        </button>
-
+        <a href="/Sucato/carrito.php" class="btn btn-dark btn-sm position-absolute top-0 end-0 mt-4 me-4" style="z-index: 100;">
+            <i class="fa-solid fa-cart-shopping"></i>
+        </a>
     </div>
 
 
