Cierra sesión y corrección de algunos href

--- a/templates/header.html
+++ b/templates/header.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <!-- Carrito -->
-        <a href="/Sucato/carrito.php" class="btn btn-dark btn-sm position-absolute top-0 end-0 mt-4 me-4" style="z-index: 100;">
+        <a href="carrito.php" class="btn btn-dark btn-sm position-absolute top-0 end-0 mt-4 me-4" style="z-index: 100;">
             <i class="fa-solid fa-cart-shopping"></i>
         </a>
     </div>
@@ -50,6 +50,9 @@
                         </li>
                         <li class="nav-item bg-warning rounded mx-4">
                             <a class="nav-link text-white p-2 text-uppercase" href="quienes_somos.php">Quiénes Somos</a>
+                        </li>
+                        <li class="nav-item bg-warning rounded mx-4">
+                            <a class="nav-link text-white p-2 text-uppercase" href="DAL/cierraSesion.php">Cerrar sesión</a>
                         </li>
 
                     </ul>
