Actualizar datos personales

--- a/templates/header.html
+++ b/templates/header.html
@@ -22,7 +22,15 @@
     <div class="container">
         <!-- Carrito -->
         <a href="carrito.php" class="btn btn-dark btn-sm position-absolute top-0 end-0 mt-4 me-4" style="z-index: 100;">
-            <i class="fa-solid fa-cart-shopping"></i>
+            <i class="fas fa-cart-shopping"></i>
+
+        </a>
+    </div>
+
+    <div class="container">
+        <!-- Carrito -->
+        <a href="actualizarUsuario.php" class="btn btn-dark btn-sm position-absolute top-0 start-0 mt-4 ms-4" style="z-index: 100;">
+            <i class="fa-solid fa-user"></i>
         </a>
     </div>
 
