--- a/templates/header.html
+++ b/templates/header.html
@@ -46,7 +46,7 @@
                     <h1>BY SUCATO TRADINGS CR</h1>
                 </div>
                 <div class="mt-3">
-                    <ul class="navbar-nav d-flex flex-row justify-content-center">
+                    <ul class="navbar-nav d-flex flex-row justify-content-center flex-wrap">
                         <li class="nav-item bg-warning rounded mx-4">
                             <a class="nav-link text-white p-2 text-uppercase" href="index.php">Inicio</a>
                         </li>
